feat: auth feature (client & server)
