# packages/client/configs/openapi/swagger.json
@@ -156,7 +156,9 @@
       "get": {
         "summary": "list all contracts",
         "description": "list all contracts",
-        "tags": ["contracts"],
+        "tags": [
+          "contracts"
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -172,7 +174,9 @@
       "post": {
         "summary": "create a contract",
         "description": "create a contract",
-        "tags": ["contracts"],
+        "tags": [
+          "contracts"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -202,7 +206,11 @@
                   "type": "string"
                 }
               },
-              "required": ["title", "customerId", "startDate"]
+              "required": [
+                "title",
+                "customerId",
+                "startDate"
+              ]
             }
           }
         ],
@@ -232,7 +240,9 @@
       "get": {
         "summary": "list a contract by id",
         "description": "list a contract by id",
-        "tags": ["contracts"],
+        "tags": [
+          "contracts"
+        ],
         "parameters": [
           {
             "type": "number",
@@ -261,7 +271,9 @@
       "get": {
         "summary": "list all customers",
         "description": "list all customers",
-        "tags": ["customers"],
+        "tags": [
+          "customers"
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -277,7 +289,9 @@
       "post": {
         "summary": "create a customer",
         "description": "create a customer",
-        "tags": ["customers"],
+        "tags": [
+          "customers"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -307,7 +321,11 @@
                   "type": "boolean"
                 }
               },
-              "required": ["name", "email", "phone"]
+              "required": [
+                "name",
+                "email",
+                "phone"
+              ]
             }
           }
         ],
@@ -331,7 +349,9 @@
       "get": {
         "summary": "get a customer by id",
         "description": "get a customer by id",
-        "tags": ["customers"],
+        "tags": [
+          "customers"
+        ],
         "parameters": [
           {
             "type": "number",
@@ -359,7 +379,9 @@
       "put": {
         "summary": "update a customer by id",
         "description": "update a customer by id",
-        "tags": ["customers"],
+        "tags": [
+          "customers"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -416,7 +438,9 @@
       "delete": {
         "summary": "delete a customer by id",
         "description": "delete a customer by id",
-        "tags": ["customers"],
+        "tags": [
+          "customers"
+        ],
         "parameters": [
           {
             "type": "number",
@@ -455,7 +479,9 @@
       "get": {
         "summary": "list all products",
         "description": "list all products",
-        "tags": ["products"],
+        "tags": [
+          "products"
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -471,7 +497,9 @@
       "post": {
         "summary": "create a product",
         "description": "create a product",
-        "tags": ["products"],
+        "tags": [
+          "products"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -486,7 +514,10 @@
                   "type": "string"
                 }
               },
-              "required": ["name", "description"]
+              "required": [
+                "name",
+                "description"
+              ]
             }
           }
         ],
@@ -510,7 +541,9 @@
       "get": {
         "summary": "get a product by id",
         "description": "get a product by id",
-        "tags": ["products"],
+        "tags": [
+          "products"
+        ],
         "parameters": [
           {
             "type": "number",
@@ -537,7 +570,9 @@
       "put": {
         "summary": "update a product by id",
         "description": "update a product by id",
-        "tags": ["products"],
+        "tags": [
+          "products"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -579,7 +614,9 @@
       "delete": {
         "summary": "delete a product by id",
         "description": "delete a product by id",
-        "tags": ["products"],
+        "tags": [
+          "products"
+        ],
         "parameters": [
           {
             "type": "number",
@@ -618,7 +655,9 @@
       "post": {
         "summary": "send an email notification",
         "description": "send an email notification",
-        "tags": ["notifications"],
+        "tags": [
+          "notifications"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -639,7 +678,12 @@
                   "type": "string"
                 }
               },
-              "required": ["to", "subject", "contractStartDate", "customerName"]
+              "required": [
+                "to",
+                "subject",
+                "contractStartDate",
+                "customerName"
+              ]
             }
           }
         ],
@@ -676,7 +720,9 @@
       "post": {
         "summary": "register new user",
         "description": "register new user",
-        "tags": ["user"],
+        "tags": [
+          "user"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -703,7 +749,11 @@
                   "type": "boolean"
                 }
               },
-              "required": ["username", "password", "email"]
+              "required": [
+                "username",
+                "password",
+                "email"
+              ]
             }
           }
         ],
@@ -727,7 +777,9 @@
       "post": {
         "summary": "login",
         "description": "login",
-        "tags": ["user"],
+        "tags": [
+          "user"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -742,7 +794,10 @@
                   "type": "string"
                 }
               },
-              "required": ["username", "password"]
+              "required": [
+                "username",
+                "password"
+              ]
             }
           }
         ],
@@ -782,7 +837,9 @@
       "post": {
         "summary": "logout",
         "description": "logout",
-        "tags": ["user"],
+        "tags": [
+          "user"
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -807,7 +864,9 @@
       "get": {
         "summary": "get profile",
         "description": "get profile",
-        "tags": ["user"],
+        "tags": [
+          "user"
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -816,6 +875,39 @@
             }
           },
           "404": {
+            "description": "Default Response",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/users/status": {
+      "get": {
+        "summary": "check auth status",
+        "description": "check auth status",
+        "tags": [
+          "user"
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
             "description": "Default Response",
             "schema": {
               "$ref": "#/definitions/Error"
